# bitvis

./: CMakeLists.txt  README
share/: CMakeLists.txt  main.glade
src/: CMakeLists.txt  bitvis.c  net.c  net.h
